--- a/src/sass/constructor.scss
+++ b/src/sass/constructor.scss
@@ -1,8 +1,9 @@
 .constructor {
-  border-top: 1px solid lightgray;
-  border-bottom: 1px solid lightgray;
-  padding: 0 10px 0 10px;
+  padding: 10px;
   font: 13px Arial, Helvetica, sans-serif;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+  margin-bottom: 20px;
 
   &__component {
     padding: 10px 0 10px 0;
@@ -16,6 +17,7 @@
   &__submit-wrapper {
     text-align: center;
     padding: 10px 0 10px 0;
+    margin: 5px 0 15px 0;
   }
 
   &__submit {
