--- a/src/sass/control-panel.scss
+++ b/src/sass/control-panel.scss
@@ -1,7 +1,6 @@
 .control-panel {
   float: left;
   width: 310px;
-  border: 1px solid black;
   padding: 10px;
   font: 13px Arial, Helvetica, sans-serif;
 }
