--- a/src/sass/info.scss
+++ b/src/sass/info.scss
@@ -13,6 +13,7 @@
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     min-width: 130px;
+    margin: 5px 0 15px 0;
 
     &:hover {
       background: #EA7B00;
