--- a/src/sass/template.scss
+++ b/src/sass/template.scss
@@ -1,5 +1,9 @@
 .template {
   font: 13px Arial, Helvetica, sans-serif;
+  padding: 10px;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+  margin-bottom: 20px;
 
   &__item {
     margin: 5px 0 5px 0;
